docs(style): fix link visibility in dark mode (#2804)
fix: link visibility in dark mode

Hello, I noticed that links were using the same color as regular text making them indistinguishable in dark mode (default). This PR changes the color of links to a different color for better accessibility in dark more. This has been bugging me for a while, so I am creating this PR to fix this 😅.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -60,10 +60,10 @@
 
 /* Links */
 [data-md-color-scheme="slate"] a {
-    color: rgba(233, 219, 189, 0.90) !important;
+    color: rgba(88, 166, 255, 0.90) !important;
 }
 [data-md-color-scheme="slate"] a:hover {
-    color: rgba(233, 219, 189, 0.90) !important;
+    color: rgba(121, 192, 255, 0.90) !important;
 }
 
 /* Code blocks */
